<?xml version="1.0" encoding="utf-8"?>
<resources>

  <plurals name="day">
    <item quantity="one">day</item>
    <item quantity="other">days</item>
  </plurals>
  <plurals name="month">
    <item quantity="one">month</item>
    <item quantity="other">months</item>
  </plurals>
  <plurals name="year">
    <item quantity="one">year</item>
    <item quantity="other">years</item>
  </plurals>

  <string name="about_author">Author</string>
  <string name="about_country">Spain</string>
  <string name="about_inspiration_song">Inspiration song</string>
  <string name="about_license">License</string>
  <string name="about_love_this_piano_song">I love this piano song</string>
  <string name="about_my_question">My question</string>
  <string name="about_send_email">Send email</string>
  <string name="about_version">Version</string>
  <string name="about_view_source_code">View source code in GitHub</string>
  <string name="action_about">About</string>
  <string name="action_add_to_calendar">Add to calendar</string>
  <string name="action_add_widget">Add widget</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_changelog">Changelog</string>
  <string name="action_delete">Delete</string>
  <string name="action_drawer_close">Close navigation drawer</string>
  <string name="action_drawer_open">Open navigation drawer</string>
  <string name="action_filter_all">All</string>
  <string name="action_filter_favorites">Favorites</string>
  <string name="action_filter_no_tag">No tag</string>
  <string name="action_filter_previous">Previous</string>
  <string name="action_filter_today">Today</string>
  <string name="action_filter_upcoming">Upcoming</string>
  <string name="action_filter_with_reminder">With reminder</string>
  <string name="action_help">Help</string>
  <string name="action_new_tag">New tag</string>
  <string name="action_no">No</string>
  <string name="action_ok">OK</string>
  <string name="action_save">Save</string>
  <string name="action_settings">Settings</string>
  <string name="action_short_earliest_date">Earliest date</string>
  <string name="action_short_favorite">Favorite</string>
  <string name="action_short_latest_date">Latest date</string>
  <string name="action_short_name">Name</string>
  <string name="action_undo">UNDO</string>
  <string name="action_view_one_column">One column</string>
  <string name="action_view_two_columns">Two columns</string>
  <string name="action_yes">Yes</string>
  <string name="app_name" translatable="false">Days</string>
  <string name="event_details_after">after</string>
  <string name="event_details_before">before</string>
  <string name="event_details_date">Date</string>
  <string name="event_details_description">Event Description</string>
  <string name="event_details_do_not_reset_automatically">Do not reset automatically</string>
  <string name="event_details_favorite">Favorite</string>
  <string name="event_details_id" translatable="false">ID</string>
  <string name="event_details_name">Event Name</string>
  <string name="event_details_no_reminder">No reminder</string>
  <string name="event_details_no_tags">No tags</string>
  <string name="event_details_notify_format_message">Notify %1$s %2$s %3$s the event</string>
  <string name="event_details_notify_the_day_of_the_event">Notify the day of the event</string>
  <string name="event_details_reminder">Reminder</string>
  <string name="event_details_reset">Reset</string>
  <string name="event_details_reset_format_message">Every %1$s %2$s %3$s the event</string>
  <string name="event_details_tags">Tags</string>
  <string name="msg_change_to_airtable_confirmation">Are you sure to use Airtable datastore? All local data will be deleted!</string>
  <string name="msg_create_event_with_voice">Speak up to create an event</string>
  <string name="msg_empty_events">You don\'t have any event yet!</string>
  <string name="msg_error">Error!</string>
  <string name="msg_error_event_could_not_be_deleted">The event could not be deleted</string>
  <string name="msg_error_event_date_required">You must select the event date</string>
  <string name="msg_error_event_id_required">You must enter an event ID</string>
  <string name="msg_error_event_name_required">You must enter an event name</string>
  <string name="msg_error_must_fill_airtable_data">You must fill in the Airtable data!</string>
  <string name="msg_error_no_tags_available">You have not yet created any tags</string>
  <string name="msg_error_tag_could_not_be_deleted">The tag could not be deleted</string>
  <string name="msg_error_tag_name_required">You must enter an tag name</string>
  <string name="msg_error_text_can_not_be_empty">Text can not be empty</string>
  <string name="msg_error_voice_recognition_not_supported">Voice recognition is not supported</string>
  <string name="msg_error_you_must_select_an_event">You must select an event</string>
  <string name="msg_event_created">Event successfully created</string>
  <string name="msg_event_deleted">Event successfully deleted</string>
  <string name="msg_event_discarded">Event discarded</string>
  <string name="msg_event_updated">Event successfully updated</string>
  <string name="msg_tag_created">Tag successfully created</string>
  <string name="msg_tag_discarded">Tag discarded</string>
  <string name="msg_tag_removed">Tag successfully deleted</string>
  <string name="msg_tag_updated">Tag successfully updated</string>
  <string name="notification_action_event_delete">Delete</string>
  <string name="notification_action_event_reset">Reset</string>
  <string name="notification_notification_big_text" translatable="false"><![CDATA[<b>%1$s</b><br/>%2$s]]></string>
  <string name="notification_period_format_after">Within %s</string>
  <string name="notification_period_format_before">%s ago</string>
  <string name="notification_period_format_today">Today</string>
  <string name="period_select_radiobutton_after">After</string>
  <string name="period_select_radiobutton_before">Before</string>
  <string name="period_select_radiobutton_days">Days</string>
  <string name="period_select_radiobutton_months">Months</string>
  <string name="period_select_radiobutton_years">Years</string>
  <string name="period_select_radiogroup_time">Do you want to be notified before or after the event?</string>
  <string name="period_select_radiogroup_time_unit">Select the time unit</string>
  <string name="period_select_title_set_reminder">Set reminder</string>
  <string name="period_select_title_set_restart_time">Set the restart time</string>
  <string name="pref_airtable_api_key" translatable="false">airtable_api_key</string>
  <string name="pref_airtable_base_id" translatable="false">airtable_base_id</string>
  <string name="pref_airtable_preference" translatable="false">airtable_preference</string>
  <string name="pref_collect_statistics" translatable="false">collect_statistics</string>
  <string name="pref_default_list" translatable="false">default_list</string>
  <string name="pref_privacy_policy">Privacy policy</string>
  <string name="pref_reminder_time" translatable="false">reminder_time</string>
  <string name="pref_remote_datastore" translatable="false">remote_datastore</string>
  <string name="pref_sort_mode" translatable="false">sort_mode</string>
  <string name="pref_view_column_number" translatable="false">view_column_number</string>
  <string name="summary_airtable_api_key">Your Airtable API key. Obtained from Airtable account information.</string>
  <string name="summary_airtable_base_id">Base ID of the database with Days structure.</string>
  <string name="summary_collect_statistics">Submit anonymous usage statistics and error reports to help improve Days. No personal data will be collected.</string>
  <string name="summary_reminder_time">Select the time at which you want to receive the event reminder.</string>
  <string name="summary_remote_datastore">Use remote storage to save the data. If not enabled, only a local copy of the data will be saved.</string>
  <string name="tag_details_name">Tag name</string>
  <string name="tasker_edit_event_modify_this_field">Modify this field</string>
  <string name="tasker_edit_select_an_event">Select an Event</string>
  <string name="title_activity_about">About</string>
  <string name="title_activity_event_create">New event</string>
  <string name="title_activity_event_edit">Edit event</string>
  <string name="title_activity_settings">Settings</string>
  <string name="title_activity_tag_create">New tag</string>
  <string name="title_activity_tag_edit">Edit tag</string>
  <string name="title_airtable_api_key" translatable="false">Airtable API Key</string>
  <string name="title_airtable_base_id" translatable="false">Airtable Base ID</string>
  <string name="title_collect_statistics">Improve Days</string>
  <string name="title_datastore">Datastore</string>
  <string name="title_default_list">Default list</string>
  <string name="title_dialog_airtable_api_key">Introduce your Airtable API key</string>
  <string name="title_dialog_airtable_base">Introduce your Airtable base ID</string>
  <string name="title_dialog_reminder_time">Set the reminder time</string>
  <string name="title_event_search">Search</string>
  <string name="title_event_voice_create">Voice input</string>
  <string name="title_general">General</string>
  <string name="title_order">Order</string>
  <string name="title_privacy">Privacy</string>
  <string name="title_reminder_time">Reminder time</string>
  <string name="title_remote_datastore">Remote datastore</string>
  <string name="title_select_tags">Select tags</string>
  <string name="title_view_mode">View mode</string>
  <string name="title_warning">Warning</string>

</resources>
