<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.clloret.days.activities.MainActivity">
  <item
    android:id="@+id/menu_search_events"
    android:icon="@android:drawable/ic_menu_search"
    android:title="@string/title_event_search"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    app:showAsAction="always" />
  <item
    android:id="@+id/menu_order"
    android:icon="@drawable/ic_sort_wht_24dp"
    android:orderInCategory="100"
    android:title="@string/title_order"
    app:showAsAction="ifRoom">
    <menu>
      <group android:checkableBehavior="single">
        <item
          android:id="@+id/menu_sort_name"
          android:title="@string/action_short_name" />
        <item
          android:id="@+id/menu_sort_favorite"
          android:title="@string/action_short_favorite" />
        <item
          android:id="@+id/menu_sort_latest_date"
          android:title="@string/action_short_latest_date" />
        <item
          android:id="@+id/menu_sort_oldest_date"
          android:title="@string/action_short_earliest_date" />
      </group>
    </menu>
  </item>
</menu>
