<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".events.create.EventCreateActivity"
  >

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_xlarge"
      android:orientation="vertical">

      <LinearLayout
        android:id="@+id/layout_eventdetail_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_gravity="center"
          android:tint="@color/drawer_icon_unselected"
          app:srcCompat="@drawable/ic_event_24dp"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_date"
            />

          <TextView
            android:id="@+id/textview_eventdetail_date"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_event_detail_text"
            tools:text="17/05/2017"/>
        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/layout_eventdetail_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_event_detail_layout"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_gravity="center"
          android:tint="@color/drawer_icon_unselected"
          app:srcCompat="@drawable/ic_label_24dp"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_tags"
            />

          <TextView
            android:id="@+id/textview_eventdetail_tags"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:ellipsize="end"
            android:lines="1"
            tools:text="General, Events"/>
        </LinearLayout>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/layout_eventdetail_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_event_detail_layout"
        android:orientation="horizontal">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_gravity="center"
          android:tint="@color/drawer_icon_unselected"
          app:srcCompat="@drawable/ic_notifications_24dp"/>

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical">

          <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_reminder"
            />

          <TextView
            android:id="@+id/textview_eventdetail_reminder"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_event_detail_text"
            tools:text="Notify 5 days before the event"
            />

        </LinearLayout>

        <ImageView
          android:id="@+id/button_eventdetail_clear_reminder"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_gravity="center"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:clickable="true"
          android:focusable="true"
          android:src="@drawable/ic_clear_24dp"
          />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/layout_eventdetail_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_event_detail_layout"
        android:orientation="horizontal">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_gravity="center"
          android:tint="@color/drawer_icon_unselected"
          app:srcCompat="@drawable/ic_restore_24dp"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_reset"
            />

          <TextView
            android:id="@+id/textview_eventdetail_reset"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_event_detail_text"
            tools:text="Every 5 days after the event"
            />

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

  <com.github.jorgecastilloprz.FABProgressCircle
    android:id="@+id/fabProgress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="@dimen/elevation_all_fab"
    app:layout_anchor="@id/app_bar_layout"
    app:layout_anchorGravity="bottom|right|end"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_large"
      android:src="@drawable/ic_edit_wht_24dp"
      />

  </com.github.jorgecastilloprz.FABProgressCircle>

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/spacing_xlarge"
    android:theme="@style/AppTheme.AppBarOverlay">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:contentScrim="?attr/colorPrimary"
      app:expandedTitleGravity="top|center_horizontal"
      app:expandedTitleTextAppearance="@style/Base.TextAppearance.AppCompat.Title"
      app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
      app:titleEnabled="false"
      >

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?attr/actionBarSize"
        android:paddingStart="56dp"
        android:paddingEnd="@dimen/spacing_large"
        android:orientation="vertical"
        >

        <ViewSwitcher
          android:id="@+id/event_switcher"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <TextView
            android:id="@+id/textview_eventdetail_name"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Event Name"
            />

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_eventdetail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.5"
            >

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/edittext_eventdetail_name"
              style="@style/TextAppearance.AppCompat.Display1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/event_details_name"
              android:inputType="textCapSentences"
              />

          </com.google.android.material.textfield.TextInputLayout>

        </ViewSwitcher>

        <ViewSwitcher
          android:id="@+id/description_switch"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <TextView
            android:id="@+id/textview_eventdetail_description"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Event Description"
            />

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_eventdetail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/edittext_eventdetail_description"
              style="@style/TextAppearance.AppCompat.Subhead"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/event_details_description"
              android:inputType="textCapSentences"
              />

          </com.google.android.material.textfield.TextInputLayout>

        </ViewSwitcher>

      </LinearLayout>

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>